queries fs and fixed overflow in the right side

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
     box-sizing: border-box;
 }
 
+
 body,
 h1,
 h2,
@@ -63,6 +64,7 @@ body {
     font-family: var(--ff-body);
     font-size: var(--fs-200);
     font-weight: var(--fw-regular);
+    overflow-x: hidden;
 }
 
 h1,
@@ -216,13 +218,13 @@ SECTION FEATURES
 }
 
 .feature__container {
+    flex-wrap: wrap;
     padding-top: 25rem;
     justify-content: space-between;
     text-align: center;
 }
 
 .feature {
-    width: 100%;
     flex-direction: column;
 }
 
@@ -273,6 +275,7 @@ Media Queries
 
 @media (max-width: 60em) {
     .feature__container {
+        padding-top: 20rem;
         flex-direction: column;
         gap: 3.5rem;
     }
@@ -294,6 +297,12 @@ Media Queries
 
 }
 
+@media (max-width: 56.25em) {
+    header {
+        background-position: -28% 38%, 109% 75%;
+    }
+}
+
 @media (max-width: 48em) {
     .header__title {
         font-size: var(--fs-600);
@@ -309,6 +318,24 @@ Media Queries
     }
 
     .header__btn--secondary {
+        font-size: 1rem;
+    }
+
+    .feature__container {
+        padding-top: 15rem;
+    }
+
+    .feature__title {
+        font-size: 1.75rem;
+    }
+
+    .feature__number {
+        width: 3rem;
+        height: 2.875rem;
+        font-size: 1.25rem;
+    }
+
+    .feature__description {
         font-size: 1rem;
     }
 }
